--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
